powerdns-admin/pdns-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pdns
  name: pdns
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: pdns
